--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,28 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+# Игнорируем папку с настройками IntelliJ IDEA
+.idea/
 *.iml
-*.ipr
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Игнорируем файлы компиляции и кэша
+*.class
+*.log
+*.war
+*.ear
+*.jar
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
+# Игнорируем временные файлы операционной системы
 .DS_Store
+Thumbs.db
+
+# Игнорируем артефакты сборки Maven
+target/
+out/
+
+# Игнорируем временные файлы тестирования
+test-output/
+
+# Игнорируем файлы зависимостей (если используете Maven Wrapper)
+.mvn/
+# Игнорируем временные файлы Maven
+pom.xml
+tag.gz
+pom.xml.releaseBackup
